Fix colors, fonts, and alignment

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,59 @@
 * {
-	box-sizing: border-box;
+  font-family: Roboto, sans-serif;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: blue;
+  border: none;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+#restart {
+  display: block;
+  margin: 50px auto;
+}
+
+#set-names {
+  width: fit-content;
+  margin: 0 auto;
+}
+
+label {
+  padding: 10px;
+}
+
+#set-names button {
+  margin: 10px;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 #grid {
-	display: flex;
-	flex-wrap: wrap;
-	height: 300px;
-	width: 300px;
-
+  margin: 50px auto;
+  display: flex;
+  flex-wrap: wrap;
+  height: 300px;
+  width: 300px;
 }
 
 .cell {
-	height: 100px;
-	width: 100px;
-	border: 1px solid black;
+  height: 100px;
+  width: 100px;
+  border: 1px solid black;
+  font-size: 50px;
+  line-height: 100px;
+  text-align: center;
+}
+
+#result {
+  width: fit-content;
+  margin: 0 auto;
+}
+
+#help {
+  width: fit-content;
+  margin: 0 auto;
 }
